--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Foi Goleada?</title>
+</head>
+
+<body>
+  <div id="root"></div>
+</body>
+
+</html>
