--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
       document.getElementById('root')
     );
   </script>
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113373634-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-113373634-1');
+  </script>
+
 </body>
 
 </html>
